--- a/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
@@ -229,7 +229,9 @@ sub vcl_recv {
 	error 403 "This server has been disabled, you probably ended up here because of hardcoded IPs or broken DNS caching";
 <% end -%>
 
-	unset req.http.X-DCPath; // no injection from outside our stack
+	// no injection from outside our stack allowed for these
+	unset req.http.X-DCPath;
+	unset req.http.X-Next-Is-Cache;
 	unset req.http.Proxy; // https://httpoxy.org/
 
 	if (req.restarts == 0) {
@@ -367,15 +369,10 @@ sub deliver_synth_ {
 			set resp.http.X-Cache-Status = "hit";
 		} elsif (resp.http.X-Cache ~ "int") {
 			set resp.http.X-Cache-Status = "int";
-		} elsif (resp.http.X-Cache ~ "pass,[^,]+$") {
-			// The special pass regex above is because we have
-			// layer-differential pass rules where a frontend may
-			// intentionally pass traffic that a backend does not,
-			// which should still count as a true 'miss' if the
-			// backend misses it.
-			set resp.http.X-Cache-Status = "pass";
 		} elsif (resp.http.X-Cache ~ "miss") {
 			set resp.http.X-Cache-Status = "miss";
+		} elsif (resp.http.X-Cache ~ "pass") {
+			set resp.http.X-Cache-Status = "pass";
 		} else {
 			set resp.http.X-Cache-Status = "bug";
 		}
