--- a/modules/openstack2/templates/liberty/designate/designate.conf.erb
+++ b/modules/openstack2/templates/liberty/designate/designate.conf.erb
@@ -135,7 +135,7 @@ default_limit_admin = 10000
 auth_uri = <%= @keystone_public_uri %>
 identity_uri = <%= @keystone_admin_uri %>
 admin_user = novaadmin
-admin_password = <%= @keystoneconfig["ldap_user_pass"] %>
+admin_password = <%= @ldap_user_pass %>
 
 #-----------------------
 # Sink Service
@@ -211,14 +211,14 @@ host = <%= @secondary_pdns_ip %>
 
 # the 'pool_target' is the pdns database, which we write to for zone creation and deletion
 [pool_target:f26e0b32-736f-4f0a-831b-039a415c481e]
-options = connection: mysql://<%= @designateconfig["pdns_db_user"] %>:<%= @designateconfig["pdns_db_pass"] %>@<%=@primary_pdns_ip%>/<%= @designateconfig["pdns_db_name"] %>, host: <%= @primary_pdns_ip %>, port: 53
+options = connection: mysql://<%= @pdns_db_user %>:<%= @pdns_db_pass %>@<%=@primary_pdns_ip%>/<%= @pdns_db_name %>, host: <%= @primary_pdns_ip %>, port: 53
 # This is an alternate db account with more rights -- this setting should
 #  be used when running the db-sync command and the like during upgrades.
-#options = connection: mysql://<%= @designateconfig["db_admin_user"] %>:<%= @designateconfig["db_admin_pass"] %>@<%=@primary_pdns_ip%>/<%= @designateconfig["pdns_db_name"] %>, host: <%= @primary_pdns_ip %>, port: 53
+#options = connection: mysql://<%= @db_admin_user %>:<%= @db_admin_pass %>@<%=@primary_pdns_ip%>/<%= @pdns_db_name %>, host: <%= @primary_pdns_ip %>, port: 53
 # This is a comma separated list of the mdns servers.
 #  Note that for this to take effect, the list of masters must also be set in the pdns database:
 #  UPDATE pdns.domains SET master="<comman-separated list of masters>"
-masters = <%= scope.function_ipresolve([@designate_host, 4]) %>:5354
+masters = <%= @designate_host_ip %>:5354
 type = powerdns
 # These next two settings are /probably/ unused, it's unclear:
 host = <%= @primary_pdns_ip %>
@@ -227,14 +227,14 @@ port = 53
 <% if @secondary_pdns_ip != @primary_pdns_ip %>
 # the 'pool_target' is the pdns database, which we write to for zone creation and deletion
 [pool_target:f845cc43-2052-4d4b-a159-db6fce37b110]
-options = connection: mysql://<%= @designateconfig["pdns_db_user"] %>:<%= @designateconfig["pdns_db_pass"] %>@<%=@secondary_pdns_ip%>/<%= @designateconfig["pdns_db_name"] %>, host: <%= @secondary_pdns_ip %>, port: 53
+options = connection: mysql://<%= @pdns_db_user %>:<%= @pdns_db_pass %>@<%=@secondary_pdns_ip%>/<%= @pdns_db_name %>, host: <%= @secondary_pdns_ip %>, port: 53
 # This is an alternate db account with more rights -- this setting should
 #  be used when running the db-sync command and the like during upgrades.
-#options = connection: mysql://<%= @designateconfig["db_admin_user"] %>:<%= @designateconfig["db_admin_pass"] %>@<%=@secondary_pdns_ip%>/<%= @designateconfig["pdns_db_name"] %>, host: <%= @secondary_pdns_ip %>, port: 53
+#options = connection: mysql://<%= @db_admin_user %>:<%= @db_admin_pass %>@<%=@secondary_pdns_ip%>/<%= @pdns_db_name %>, host: <%= @secondary_pdns_ip %>, port: 53
 # This is a comma separated list of the mdns servers.
 #  Note that for this to take effect, the list of masters must also be set in the pdns database:
 #  UPDATE pdns.domains SET master="<comman-separated list of masters>"
-masters = <%= scope.function_ipresolve([@designate_host, 4]) %>:5354
+masters = <%= @designate_host_ip %>:5354
 type = powerdns
 # These next two settings are /probably/ unused, it's unclear:
 host = <%= @secondary_pdns_ip %>
@@ -266,7 +266,7 @@ port = 53
 [storage:sqlalchemy]
 # Database connection string - to configure options for a given implementation
 # like sqlalchemy or other see below
-connection = mysql://<%= @designateconfig["db_user"] %>:<%= @designateconfig["db_pass"] %>@<%= @designateconfig["db_host"] %>/<%= @designateconfig["db_name"] %>
+connection = mysql://<%= @db_user %>:<%= @db_pass %>@<%= @db_host %>/<%= @db_name %>
 #connection_debug = 100
 #connection_trace = True
 idle_timeout = 3600
@@ -281,14 +281,14 @@ retry_interval = 10
 #-----------------------
 [handler:nova_fixed_multi]
 # Domain ID of domain to create records in. For a pre-existing domain, in this case eqiad.wmflabs
-domain_id = '<%= @designateconfig["domain_id_internal_forward"] %>'
+domain_id = '<%= @domain_id_internal_forward %>'
 site = '<%= scope.lookupvar("::site") %>'
 notification_topics = monitor
 notification_topics = notifications
 control_exchange = nova
 format = '%(hostname)s.%(project_name)s.%(domain)s'
 format = '%(hostname)s.%(domain)s'
-reverse_domain_id = '<%= @designateconfig["domain_id_internal_reverse"] %>'
+reverse_domain_id = '<%= @domain_id_internal_reverse %>'
 reverse_format = '%(hostname)s.%(project_name)s.%(domain)s'
 
 #-----------------------
@@ -299,16 +299,16 @@ reverse_format = '%(hostname)s.%(project_name)s.%(domain)s'
 [handler:wmf_sink]
 # Domain ID of domain for instances.
 #  For a pre-existing domain, in this case eqiad.wmflabs
-domain_id = '<%= @designateconfig["domain_id_internal_forward"] %>'
+domain_id = '<%= @domain_id_internal_forward %>'
 notification_topics = monitor
 notification_topics = notifications
 control_exchange = nova
 
 certmanager_user = certmanager
 fqdn_format = '%(hostname)s.%(project_name)s.%(domain)s'
-puppet_master_host = "<%= scope.function_ipresolve([@designateconfig['puppetmaster_hostname'], 4]) %>"
-salt_master_host = "<%= @designateconfig['controller_hostname'] %>"
-puppet_config_backend  = "http://<%= @designateconfig['puppetmaster_hostname'] %>:8101/v1"
+puppet_master_host = "<%= @puppetmaster_hostname_ip %>"
+salt_master_host = "<%= @nova_controller %>"
+puppet_config_backend  = "http://<%= @puppetmaster_hostname %>:8101/v1"
 
 #------------------------
 # Neutron Floating Handler
@@ -327,7 +327,7 @@ puppet_config_backend  = "http://<%= @designateconfig['puppetmaster_hostname'] %
 # SQLAlchemy Pool Manager Cache
 #-----------------------
 [pool_manager_cache:sqlalchemy]
-connection = mysql://<%= @designateconfig["db_user"] %>:<%= @designateconfig["db_pass"] %>@<%= @designateconfig["db_host"] %>/<%= @designateconfig["pool_manager_db_name"] %>
+connection = mysql://<%= @db_user %>:<%= @db_pass %>@<%= @db_host %>/<%= @pool_manager_db_name %>
 #connection_debug = 100
 #connection_trace = False
 #sqlite_synchronous = True
@@ -337,8 +337,8 @@ connection = mysql://<%= @designateconfig["db_user"] %>:<%= @designateconfig["db
 
 [oslo_messaging_rabbit]
 # RabbitMQ Config
-rabbit_userid = <%= @designateconfig["rabbit_user"] %>
-rabbit_password = <%= @designateconfig["rabbit_pass"] %>
+rabbit_userid = <%= @rabbit_user %>
+rabbit_password = <%= @rabbit_pass %>
 rabbit_use_ssl = False
-rabbit_hosts = <%= @designateconfig["rabbit_host"] %>
+rabbit_hosts = <%= @rabbit_host %>
 rabbit_port = 5672
