--- a/modules/openstack/templates/liberty/nova/nova.conf.erb
+++ b/modules/openstack/templates/liberty/nova/nova.conf.erb
@@ -3,7 +3,7 @@
 verbose=True
 auth_strategy=keystone
 compute_driver=nova.virt.libvirt.LibvirtDriver
-notification_topics=notifications,ceilometer_notifications
+notification_topics=notifications
 connection_type=libvirt
 root_helper=sudo nova-rootwrap /etc/nova/rootwrap.conf
 instance_name_template=i-%08x
@@ -77,10 +77,7 @@ dnsmasq_config_file=/etc/dnsmasq-nova.conf
 notification_driver = messagingv2
 
 # Ceilometer things:
-instance_usage_audit = True
-instance_usage_audit_period = hour
-notify_on_state_change = vm_and_task_state
-
+instance_usage_audit = False
 
 
 # Deprecated, remove in Kilo:
