prometheus: Add additional blackbox module http_200_300_connect
This is the same as http_connect except it regards
300 as success.  This will be useful for openstack
service testing.

Bug: T167556
Change-Id: Ia1cba2fc6265e0284e4b224c76d8211049c2aa59

--- a/modules/prometheus/templates/blackbox_exporter.yml.erb
+++ b/modules/prometheus/templates/blackbox_exporter.yml.erb
@@ -18,6 +18,14 @@ modules:
       preferred_ip_protocol: "ip4"
       no_follow_redirects: false
       fail_if_ssl: true
+  http_200_300_connect:
+    prober: http
+    timeout: 5s
+    http:
+      preferred_ip_protocol: "ip4"
+      no_follow_redirects: false
+      fail_if_ssl: true
+      valid_status_codes: [200, 201, 202, 203, 204, 205, 206, 207, 208, 226, 300, 301, 302, 303, 304, 305, 306, 307, 308]
   https_connect:
     prober: http
     timeout: 5s
