Switch role::debdeploy::master role to Cumin-based variant
Switch debdeploy.conf to the new variant based on Cumin and install
the new debdeploy-server binary package instead of the previously
used debdeploy-master based on Salt.

Change-Id: Iff3b570c04b24116f42f1385d687e2c05161bae7

--- a/modules/debdeploy/templates/debdeploy.erb
+++ b/modules/debdeploy/templates/debdeploy.erb
@@ -1,179 +1,12 @@
 [distros]
 # Code names of supported distribution releases
-supported = trusty, jessie, stretch
+trusty = ubuntu, 14.04
+jessie = debian, 8
+stretch = debian, 9
 
-[serverlists]
-# A list of servers, each defined by one or more Salt grains. If multiple grains
-# are specified, they're processed sequentially
-misc-servers = debdeploy-tor:standard, debdeploy-ve:standard, debdeploy-spare:standard, debdeploy-releases:standard, debdeploy-testsystem:standard, debdeploy-etherpad:standard, debdeploy-lists:standard, debdeploy-otrs:standard, debdeploy-phabricator:standard, debdeploy-nova-manager:standard, debdeploy-planet:standard, debdeploy-horizon:standard, debdeploy-grafana:standard, debdeploy-irc:standard, debdeploy-packagebuild:standard, debdeploy-racktables:standard, debdeploy-syslog:standard, debdeploy-archiva:standard, debdeploy-pmacct:standard, debdeploy-labmon:standard, debdeploy-nova-control:standard, debdeploy-bugzilla:standard, debdeploy-installserver:standard, debdeploy-xenon:standard, debdeploy-icinga:standard, debdeploy-kafkatee:standard, debdeploy-gerrit:standard, debdeploy-ganglia:standard, debdeploy-db-maintenance:standard, debdeploy-hue:standard, debdeploy-ci:standard, debdeploy-librenms:standard, debdeploy-graphite:standard, debdeploy-piwik:standard, debdeploy-labsnfs:standard
-misc-external-services = debdeploy-tor:standard, debdeploy-etherpad:standard, debdeploy-lists:standard, debdeploy-planet:standard, debdeploy-otrs:standard, debdeploy-people:standard, debdeploy-mysql-analytics:standard, debdeploy-nova-api:standard, debdeploy-impala:standard
-misc-monitoring = debdeploy-grafana:standard, debdeploy-syslog:standard, debdeploy-ganglia:standard, debdeploy-graphite:standard, debdeploy-labmon:standard, debdeploy-icinga:standard, debdeploy-prometheus:standard
-misc-virt = debdeploy-nova-control:standard, debdeploy-horizon:standard, debdeploy-nova-manager:standard, debdeploy-nova-api:standard, debdeploy-labsdns:standard, debdeploy-nodepool:standard
-misc-analytics = debdeploy-kafkatee:standard, debdeploy-hue:standard, debdeploy-xenon:standard, debdeploy-mysql-analytics:standard, debdeploy-impala:standard, debdeploy-spark-worker:standard, debdeploy-stat:standard, debdeploy-stat:canary, debdeploy-notebook:standard, debdeploy-druid:standard, debdeploy-analytics-web:standard
-all-analytics = debdeploy-kafkatee:standard, debdeploy-hue:standard, debdeploy-xenon:standard, debdeploy-mysql-analytics:standard, debdeploy-impala:standard, debdeploy-spark-worker:standard, debdeploy-hadoop-worker:standard, debdeploy-hadoop-master:standard, debdeploy-hadoop-standby:standard, debdeploy-hadoop-worker:canary
-misc-others = debdeploy-spare:standard, debdeploy-testsystem:standard, debdeploy-labtest:standard, debdeploy-sectools:standard
-misc-devel = debdeploy-bugzilla:standard, debdeploy-ci:standard, debdeploy-releases:standard, debdeploy-ve:standard, debdeploy-irc:standard, debdeploy-phabricator:standard, debdeploy-gerrit:standard, debdeploy-archiva:standard, debdeploy-eventlogging:standard, debdeploy-deployment:standard, debdeploy-piwik:standard, debdeploy-zuulmerger:standard, debdeploy-debugproxy:standard, debdeploy-webperf:standard, debdeploy-oresrdb:standard
-misc-ops = debdeploy-packagebuild:standard, debdeploy-racktables:standard, debdeploy-db-maintenance:standard, debdeploy-pmacct:standard, debdeploy-installserver:standard, debdeploy-librenms:standard, debdeploy-backup-storage:standard, debdeploy-tftpserver:standard, debdeploy-saltmaster:standard, debdeploy-urldownloader:standard, debdeploy-rt:standard
-deployment-servers = debdeploy-deployment:standard
-hadoop-worker = debdeploy-hadoop-worker:standard, debdeploy-hadoop-worker:canary
-hadoop-worker-canary = debdeploy-hadoop-worker:canary
-hadoop-master = debdeploy-hadoop-master:standard
-hadoop-standby = debdeploy-hadoop-standby:standard
-hadoop = debdeploy-hadoop-worker:standard, debdeploy-hadoop-master:standard, debdeploy-hadoop-standby:standard, debdeploy-hadoop-worker:canary
-aqs = debdeploy-aqs:standard
-restbase-canary = debdeploy-restbase:canary
-restbase-eqiad = debdeploy-restbase-eqiad:standard
-restbase-codfw = debdeploy-restbase-codfw:standard
-restbase = debdeploy-restbase-codfw:standard, debdeploy-restbase-eqiad:standard, debdeploy-restbase:canary
-etcd = debdeploy-etcd:standard
-kubernetes-all: debdeploy-kubernetes-eqiad:standard, debdeploy-kubernetes-eqiad:control, deploy-kubernetes-eqiad:etcd
-kubernetes-etcd: deploy-kubernetes-eqiad:etcd
-kubernetes: debdeploy-kubernetes-eqiad:standard, debdeploy-kubernetes-eqiad:control
-kubernetes-workers: debdeploy-kubernetes-eqiad:standard
-kubernetes-masters: debdeploy-kubernetes-eqiad:standard
-mx = debdeploy-mx:standard
-ocg = debdeploy-ocg:standard
-sca = debdeploy-sca:standard, debdeploy-sca:canary
-sca-canary = debdeploy-sca:canary
-scb = debdeploy-scb:standard, debdeploy-scb:canary
-scb-canary = debdeploy-scb:canary
-all-sc = debdeploy-sca:standard, debdeploy-sca:canary, debdeploy-scb:standard, debdeploy-scb:canary
-dumps = debdeploy-dumps:standard
-installserver = debdeploy-installserver:standard
-eventlogging = debdeploy-eventlogging:standard
-ganeti = debdeploy-ganeti:standard, debdeploy-ganeti:canary
-ganeti-canary = debdeploy-ganeti:canary
-bastion = debdeploy-bastion:standard, debdeploy-bastion:canary
-bastion-canary = debdeploy-bastion:canary
-dns-auth = debdeploy-authdns:standard, debdeploy-authdns:canary
-dns-auth-canary = debdeploy-authdns:canary
-dns-rec = debdeploy-dnsrecursor:standard, debdeploy-dnsrecursor:canary
-dns-rec-canary = debdeploy-dnsrecursor:canary
-stat = debdeploy-stat:standard, debdeploy-stat:canary
-kafka-analytics-canary = debdeploy-kafka:canary
-kafka-analytics = debdeploy-kafka:standard, debdeploy-kafka:canary
-kafka-main = debdeploy-kafka-main:standard
-elastic-canary = debdeploy-elastic:canary
-elastic-eqiad = debdeploy-elastic-eqiad:standard
-elastic-codfw = debdeploy-elastic-codfw:standard
-elastic = debdeploy-elastic-eqiad:standard, debdeploy-elastic-codfw:standard, debdeploy-elastic:canary
-logging = debdeploy-logging:standard
-logstash-canary = debdeploy-logstash:canary
-logstash = debdeploy-logstash:standard, debdeploy-logstash:canary
-memcached-canary = debdeploy-memcached:canary
-memcached-eqiad = debdeploy-memcached-eqiad:standard
-memcached-codfw = debdeploy-memcached-codfw:standard
-memcached = debdeploy-memcached-codfw:standard, debdeploy-memcached-eqiad:standard, debdeploy-memcached:canary
-db-parsercache = debdeploy-parsercache:standard
-db-labsdb = debdeploy-labsdb:standard
-db-misc-servers = debdeploy-db-analytics:standard, debdeploy-db-sanitarium:standard
-db-dbstore = debdeploy-db-dbstore:standard
-db-es-eqiad = debdeploy-db-es-eqiad:standard
-db-es-codfw = debdeploy-db-es-codfw:standard
-db-es = debdeploy-db-es-eqiad:standard, debdeploy-db-es-codfw:standard
-db-dbproxy = debdeploy-db-dbproxy:standard
-db-core-eqiad = debdeploy-db-core-eqiad:standard
-db-core-codfw = debdeploy-db-core-codfw:standard
-db-core = debdeploy-db-core-eqiad:standard, debdeploy-db-core-codfw:standard
-all-db-noncore = debdeploy-parsercache:standard, debdeploy-labsdb:standard, debdeploy-db-analytics:standard, debdeploy-db-sanitarium:standard, debdeploy-db-dbstore:standard, debdeploy-db-es-eqiad:standard, debdeploy-db-es-codfw:standard, debdeploy-db-dbproxy:standard, debdeploy-osm-master:standard, debdeploy-osm-slave:standard
-osm = debdeploy-osm-master:standard, debdeploy-osm-slave:standard
-osm-master = debdeploy-osm-master:standard
-osm-slave = debdeploy-osm-slave:standard
-lvs-eqiad = debdeploy-lvs-eqiad:standard
-lvs-codfw = debdeploy-lvs-codfw:standard
-lvs-esams = debdeploy-lvs-esams:standard
-lvs-ulsfo = debdeploy-lvs-ulsfo:standard
-lvs = debdeploy-lvs-eqiad:standard, debdeploy-lvs-codfw:standard, debdeploy-lvs-esams:standard, debdeploy-lvs-ulsfo:standard, debdeploy-lvs:canary
-lvs-canary = debdeploy-lvs:canary
-swift-fe-eqiad = debdeploy-swift-fe-eqiad:standard
-swift-fe-codfw = debdeploy-swift-fe-codfw:standard
-swift-fe-esams = debdeploy-swift-fe-esams:standard
-swift-fe = debdeploy-swift-fe-eqiad:standard, debdeploy-swift-fe-codfw:standard, debdeploy-swift-fe-esams:standard, debdeploy-swift-fe-eqiad:canary
-swift-fe-canary = debdeploy-swift-fe-eqiad:canary
-swift-be-eqiad = debdeploy-swift-be-eqiad:standard
-swift-be-codfw = debdeploy-swift-be-codfw:standard
-swift-be-esams = debdeploy-swift-be-esams:standard
-swift-be = debdeploy-swift-be-eqiad:standard, debdeploy-swift-be-codfw:standard, debdeploy-swift-be-esams:standard, debdeploy-swift-be-eqiad:canary
-swift-be-canary = debdeploy-swift-be-eqiad:canary
-puppetmaster-backend = debdeploy-puppetmaster-backend:standard
-puppetmaster-frontend = debdeploy-puppetmaster-frontend:standard
-puppetmaster = debdeploy-puppetmaster-backend:standard, debdeploy-puppetmaster-frontend:standard
-puppetdb = debdeploy-puppetmaster-puppetdb:standard
-snapshot = debdeploy-snapshot:standard, debdeploy-snapshot:canary
-snapshot-canary = debdeploy-snapshot:canary
-parsoid = debdeploy-parsoid-eqiad:standard, debdeploy-parsoid-codfw:standard, debdeploy-parsoid-eqiad:canary, debdeploy-parsoid-codfw:canary
-parsoid-eqiad = debdeploy-parsoid-eqiad:standard, debdeploy-parsoid-eqiad:canary
-parsoid-codfw = debdeploy-parsoid-codfw:standard, debdeploy-parsoid-codfw:canary
-parsoid-canary = debdeploy-parsoid-eqiad:canary, debdeploy-parsoid-codfw:canary
-maps-master = debdeploy-maps-master:standard
-maps-slave = debdeploy-maps-slave:standard
-maps = debdeploy-maps-master:standard, debdeploy-maps-slave:standard
-labvirt = debdeploy-nova-compute:standard, debdeploy-nova-compute:canary
-labvirt-canary = debdeploy-nova-compute:canary
-wdqs = debdeploy-wdqs:standard
-poolcounter = debdeploy-poolcounter-eqiad:standard, debdeploy-poolcounter-codfw:standard
-poolcounter-eqiad = debdeploy-poolcounter-eqiad:standard
-poolcounter-codfw = debdeploy-poolcounter-codfw:standard
-videoscaler = debdeploy-videoscaler-eqiad:standard, debdeploy-videoscaler-codfw:standard, debdeploy-videoscaler:canary
-videoscaler-eqiad = debdeploy-videoscaler-eqiad:standard
-videoscaler-codfw = debdeploy-videoscaler-codfw:standard
-videoscaler-canary = debdeploy-videoscaler:canary
-imagescaler = debdeploy-imagescaler-eqiad:standard, debdeploy-imagescaler-codfw:standard, debdeploy-imagescaler-eqiad:canary, debdeploy-imagescaler-codfw:canary
-imagescaler-eqiad = debdeploy-imagescaler-eqiad:standard, debdeploy-imagescaler-eqiad:canary
-imagescaler-codfw = debdeploy-imagescaler-codfw:standard, debdeploy-imagescaler-codfw:canary
-imagescaler-canary = debdeploy-imagescaler-eqiad:canary, debdeploy-imagescaler-codfw:canary
-all-mw = debdeploy-appserverapi-eqiad:standard, debdeploy-appserverapi:single_canary, debdeploy-appserverapi-eqiad:canary, debdeploy-jobrunner-eqiad:standard, debdeploy-jobrunner-eqiad:canary, debdeploy-appserver-eqiad:standard, debdeploy-appserver-eqiad:canary, debdeploy-appserver:single_canary, debdeploy-imagescaler-eqiad:standard, debdeploy-imagescaler-eqiad:canary, debdeploy-appserverapi-codfw:standard, debdeploy-jobrunner-codfw:standard, debdeploy-appserver-codfw:standard, debdeploy-imagescaler-codfw:standard, debdeploy-imagescaler-codfw:canary, debdeploy-videoscaler-eqiad:standard, debdeploy-videoscaler-codfw:standard, debdeploy-videoscaler:canary, debdeploy-mediawiki-maintenance-eqiad:standard, debdeploy-mediawiki-maintenance-codfw:standard
-all-mw-eqiad = debdeploy-appserverapi-eqiad:standard, debdeploy-appserverapi:single_canary, debdeploy-appserverapi-eqiad:canary, debdeploy-jobrunner-eqiad:standard, debdeploy-jobrunner-eqiad:canary, debdeploy-appserver-eqiad:standard, debdeploy-appserver-eqiad:canary, debdeploy-appserver:single_canary, debdeploy-imagescaler-eqiad:standard, debdeploy-imagescaler-eqiad:canary, debdeploy-videoscaler-eqiad:standard, debdeploy-mediawiki-maintenance-eqiad:standard
-all-mw-codfw = debdeploy-appserverapi-codfw:standard, debdeploy-jobrunner-codfw:standard, debdeploy-appserver-codfw:standard, debdeploy-imagescaler-codfw:standard, debdeploy-imagescaler-codfw:canary, debdeploy-videoscaler-codfw:standard, debdeploy-mediawiki-maintenance-codfw:standard
-mw-api-eqiad = debdeploy-appserverapi-eqiad:standard
-mw-api-codfw = debdeploy-appserverapi-codfw:standard
-mw-api = debdeploy-appserverapi-codfw:standard, debdeploy-appserverapi-eqiad:standard, debdeploy-appserverapi:single_canary, debdeploy-appserverapi-eqiad:canary
-mw-api-canary = debdeploy-appserverapi-eqiad:canary
-mw-api-canary-single = debdeploy-appserverapi:single_canary
-mw-maintenance = debdeploy-mediawiki-maintenance-eqiad:standard, debdeploy-mediawiki-maintenance-codfw:standard
-jobrunner-eqiad = debdeploy-jobrunner-eqiad:standard
-jobrunner-codfw = debdeploy-jobrunner-codfw:standard
-jobrunner= debdeploy-jobrunner-codfw:standard, debdeploy-jobrunner-eqiad:standard, debdeploy-jobrunner-eqiad:canary
-jobrunner-canary = debdeploy-jobrunner-eqiad:canary
-mw-eqiad = debdeploy-appserver-eqiad:standard, debdeploy-appserver-eqiad:canary, debdeploy-appserver:single_canary
-mw-codfw = debdeploy-appserver-codfw:standard
-mw = debdeploy-appserver-codfw:standard, debdeploy-appserver-eqiad:standard, debdeploy-appserver:single_canary, debdeploy-appserver-eqiad:canary
-mw-canary = debdeploy-appserver-eqiad:canary
-mw-canary-single = debdeploy-appserver:single_canary
-openldap = debdeploy-openldap-corp:standard, debdeploy-openldap-corp:canary, debdeploy-openldap-labs:standard
-openldap-canary = debdeploy-openldap-corp:canary
-cp-eqiad = debdeploy-cp-eqiad-misc:standard, debdeploy-cp-eqiad-text:standard, debdeploy-cp-eqiad-upload:standard
-cp-codfw = debdeploy-cp-codfw-text:standard, debdeploy-cp-codfw-upload:standard, debdeploy-cp-codfw-misc:standard
-cp-esams = debdeploy-cp-esams-text:standard, debdeploy-cp-esams-upload:standard, debdeploy-cp-esams-misc:standard
-cp-ulsfo = debdeploy-cp-ulsfo-text:standard, debdeploy-cp-ulsfo-upload:standard, debdeploy-cp-ulsfo-misc:standard
-cp-misc = debdeploy-cp-eqiad-misc:standard, debdeploy-cp-codfw-misc:standard, debdeploy-cp-esams-misc:standard, debdeploy-cp-ulsfo-misc:standard
-cp-text = debdeploy-cp-eqiad-text:standard, debdeploy-cp-codfw-text:standard, debdeploy-cp-esams-text:standard
-cp-upload = debdeploy-cp-eqiad-upload:standard, debdeploy-cp-codfw-upload:standard, debdeploy-cp-esams-upload:standard
-cp = debdeploy-cp-eqiad-misc:standard, debdeploy-cp-eqiad-text:standard, debdeploy-cp-eqiad-upload:standard, debdeploy-cp-codfw-text:standard, debdeploy-cp-codfw-upload:standard, debdeploy-cp-esams-text:standard, debdeploy-cp-esams-upload:standard, debdeploy-cp-ulsfo-text:standard, debdeploy-cp-ulsfo-upload:standard, debdeploy-cp-codfw-misc:standard, debdeploy-cp-esams-misc:standard, debdeploy-cp-ulsfo-misc:standard
-cp-canary = debdeploy-cp:canary
-redis-eqiad = debdeploy-redis-eqiad:standard, debdeploy-redis-eqiad:canary
-redis-codfw = debdeploy-redis-codfw:standard
-redis-canary = debdeploy-redis-eqiad:canary
-redis = debdeploy-redis-eqiad:standard, debdeploy-redis-codfw:standard, debdeploy-redis-eqiad:canary
-zookeeper-codfw = debdeploy-zookeeper-codfw:standard
-zookeeper-eqiad = debdeploy-zookeeper-eqiad:standard
-zookeeper = debdeploy-zookeeper-codfw:standard, debdeploy-zookeeper-eqiad:standard
-labs-nfs = debdeploy-labsnfs:standard
-graphite = debdeploy-graphite:standard
-yubiauth = debdeploy-yubiauth:standard
-oresrdb = debdeploy-oresrdb:standard
-labtest = debdeploy-labtest:standard
-notebook = debdeploy-notebook:standard
-druid = debdeploy-druid:standard
-prometheus = debdeploy-prometheus:standard
-thumbor = debdeploy-thumbor:standard
-dbmonitor = debdeploy-dbmonitor:standard
-labcontrol = debdeploy-nova-control:standard
-labnet = debdeploy-nova-api:standard
-labservices = debdeploy-labsdns:standard
-failoid = debdeploy-failoid:standard
-dc-codfw = site:codfw
-dc-esams = site:esams
-dc-ulsfo = site:ulsfo
-dc-eqiad = site:eqiad
-dc-all = site:eqiad, site:codfw, site:ulsfo, site:esams
+[libraries]
+openssl = libssl, libcrypto
+gnutls28 = libgnutls-openssl, libgnutls-deb0, libgnutls
+pam = libpam, libpamc, libpam_misc
+libonig = libonig
+libgd2 = libgd
