thumbor: add logstash config for codfw
Also only use logstash handler if it is configured

Bug: T150734
Change-Id: I027ccd6219cc763b6f634ade03a971551260b5e5

--- a/modules/thumbor/templates/server.conf.erb
+++ b/modules/thumbor/templates/server.conf.erb
@@ -267,7 +267,11 @@ THUMBOR_LOG_CONFIG = {
     'loggers': {
         '': {
             'level': 'DEBUG',
+<%- if @logstash_host != nil -%>
             'handlers': ['debugstream', 'errorstream', 'http404', 'logstash']
+<% else %>
+            'handlers': ['debugstream', 'errorstream', 'http404']
+<%- end -%>
         }
     }
 }
