Add library alias for src:file
Change-Id: I4c3396225aaaad6dd410eb38a29f63c6d6dfab1e

--- a/modules/profile/templates/debdeploy/debdeploy.erb
+++ b/modules/profile/templates/debdeploy/debdeploy.erb
@@ -10,3 +10,4 @@ gnutls28 = libgnutls-openssl, libgnutls-deb0, libgnutls
 pam = libpam, libpamc, libpam_misc
 libonig = libonig
 libgd2 = libgd
+file = libmagic
