VCL: Improve cache status stats calcuations
The existing calculation for X-Cache-Status tries to make a
special exception for the known layer-differential pass cases
while assuming that the only known cases are ones where the
frontend passes but the backend(s) may miss or hit.  We're soon
introducing the opposite (fe miss may lead to a backend pass), and
also the existing logic looks broken to me anyways.  This simple
and more-universal view is that if any layer reports a true miss,
we count the request as a miss (there was an opportunity to cache
somewhere, and we failed).  Only those that report pass at every
layer will be counted as a global pass.

The varnishxcache stats output is somewhat-similarly flawed: the
rules it uses for separating front/local/remote hits and ints seem
wrong on multiple levels.  They may report hits from the final
core cache as a frontend hit, and they may also incorrectly call
"local" backend hits "remote" in the core-dc case.  It also
has the same strange (and probably faulty) layer-differential
miss/pass problems as X-Cache-Status, and is re-worked to use the
same logic as above.

This may cause small jumps in our current cache stats calculations
due to re-interpretation.  These are not behavioral changes, just
changes in reporting.

Change-Id: I025d2910149f9754646fcdfd902dfa6ea1b25a08

--- a/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
@@ -367,15 +367,10 @@ sub deliver_synth_ {
 			set resp.http.X-Cache-Status = "hit";
 		} elsif (resp.http.X-Cache ~ "int") {
 			set resp.http.X-Cache-Status = "int";
-		} elsif (resp.http.X-Cache ~ "pass,[^,]+$") {
-			// The special pass regex above is because we have
-			// layer-differential pass rules where a frontend may
-			// intentionally pass traffic that a backend does not,
-			// which should still count as a true 'miss' if the
-			// backend misses it.
-			set resp.http.X-Cache-Status = "pass";
 		} elsif (resp.http.X-Cache ~ "miss") {
 			set resp.http.X-Cache-Status = "miss";
+		} elsif (resp.http.X-Cache ~ "pass") {
+			set resp.http.X-Cache-Status = "pass";
 		} else {
 			set resp.http.X-Cache-Status = "bug";
 		}
