[WIP] stabilize backend storage patterns
As discussed on IRC, this may help reduce the mailbox lag problem
and improve the backend hitrates (for local fe traffic) at the
core DCs.  The basic idea is that for be->be fetches, the
receiving backend should operate in a hit-or-pass mode: it will
serve existing object hits, but will not bring new misses into its
cached set.  A hieradata setting should control the
"@backend_warming" flag in the VCL, for the operationally-rare
case where we want to disable this behavior when warming an inner
cache using an outer's misses.

TODO: hook up the @backend_warming flag, modulo bikeshedding about
various puppet coding rules and ongoing refactors.

Change-Id: I17f02801f1d18ee0b27521f182fd4e041c6dd8fb

--- a/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
@@ -229,7 +229,9 @@ sub vcl_recv {
 	error 403 "This server has been disabled, you probably ended up here because of hardcoded IPs or broken DNS caching";
 <% end -%>
 
-	unset req.http.X-DCPath; // no injection from outside our stack
+	// no injection from outside our stack allowed for these
+	unset req.http.X-DCPath;
+	unset req.http.X-Next-Is-Cache;
 	unset req.http.Proxy; // https://httpoxy.org/
 
 	if (req.restarts == 0) {
