thumbor: use memorysize_mb fact for unit MemoryLimit
Using a percentage for MemoryLimit is a systemd 231 feature. Calculate
the percentage at puppet time in the template instead.

Bug: T121388
Bug: T174997
Change-Id: I3da3c20016a2dc3fc38c8d1830832227adc4bc29

--- a/modules/thumbor/templates/initscripts/thumbor@.systemd.erb
+++ b/modules/thumbor/templates/initscripts/thumbor@.systemd.erb
@@ -10,7 +10,7 @@ User=thumbor
 PrivateTmp=yes
 Restart=always
 SyslogIdentifier=thumbor@%i
-MemoryLimit=15%
+MemoryLimit=<% @memorysize_mb.to_i * 0.15 -%>M
 
 [Install]
 WantedBy=multi-user.target
