openstack: explicitly define default_log_levels
Based on compute documentation for:
Liberty:
https://docs.openstack.org/liberty/config-reference/content/list-of-compute-config-options.html
Mitaka:
https://docs.openstack.org/mitaka/config-reference/compute/config-options.html

Change-Id: I23b04e6a2a055d3b9ecdf5611b8039660550dc27

--- a/modules/openstack/templates/liberty/nova/nova.conf.erb
+++ b/modules/openstack/templates/liberty/nova/nova.conf.erb
@@ -1,6 +1,7 @@
 [DEFAULT]
 
 verbose=True
+default_log_levels=default_log_levels = amqp=WARN, amqplib=WARN, boto=WARN, qpid=WARN, sqlalchemy=WARN, suds=INFO, oslo.messaging=INFO, iso8601=WARN, requests.packages.urllib3.connectionpool=WARN, urllib3.connectionpool=WARN, websocket=WARN, requests.packages.urllib3.util.retry=WARN, urllib3.util.retry=WARN, keystonemiddleware=WARN, routes.middleware=WARN, stevedore=WARN, taskflow=WARN
 auth_strategy=keystone
 compute_driver=nova.virt.libvirt.LibvirtDriver
 notification_topics=notifications,ceilometer_notifications
