Gerrit: Make proxy http port configurable
This is manly for labs where the port can be taken sometimes.

Change-Id: If22079c29468b0da3ab35d6629ddefacfc74c454

--- a/modules/gerrit/templates/gerrit.config.erb
+++ b/modules/gerrit/templates/gerrit.config.erb
@@ -95,7 +95,7 @@
     linkname = diffusion
     urlEncode = false
 [httpd]
-    listenUrl = proxy-https://127.0.0.1:8080/r/
+    listenUrl = proxy-https://127.0.0.1:<%= @proxy_http_port %>/r/
     maxQueued = 500
     minThreads = 10
     maxThreads = 60
