--- a/modules/salt/templates/master.erb
+++ b/modules/salt/templates/master.erb
@@ -199,7 +199,7 @@ auto_accept: <%= @salt_auto_accept %>
 
 # Add any additional locations to look for master runners
 #runner_dirs: []
-<% if @salt_runner_dirs %>runner_dirs: [<%= @salt_runner_dirs.map { |i| "'" + i.to_s + "'" }.join(",") %>]<% end %>
+<% if @salt_runner_dir %>runner_dirs: ['<%= @salt_runner_dir %>']<% end %>
 
 # Enable Cython for master side modules
 #cython_enable: False
@@ -273,10 +273,10 @@ auto_accept: <%= @salt_auto_accept %>
 #  base:
 #    - /srv/salt
 <% if @salt_file_roots != {} %>
-file_roots:<% @salt_file_roots.sort.each do |salt_environment, salt_roots| %>
-  <%= salt_environment %>:<% salt_roots.sort.each do |salt_root| %>
+file_roots:<% @salt_file_roots.sort.each do |salt_environment, salt_root| %>
+  <%= salt_environment %>:
     - <%= salt_root %>
-<% end %><% end %><% end %>
+<% end %><% end %>
 
 # The hash_type is the hash to use when discovering the hash of a file on
 # the master server, the default is md5, but sha1, sha224, sha256, sha384
@@ -344,10 +344,10 @@ file_roots:<% @salt_file_roots.sort.each do |salt_environment, salt_roots| %>
 #  base:
 #    - /srv/pillar
 <% if @salt_pillar_roots != {} %>
-pillar_roots:<% @salt_pillar_roots.sort.each do |salt_environment, salt_roots| %>
-  <%= salt_environment %>:<% salt_roots.sort.each do |salt_root| %>
+pillar_roots:<% @salt_pillar_roots.sort.each do |salt_environment, salt_root| %>
+  <%= salt_environment %>:
     - <%= salt_root %>
-<% end %><% end %><% end %>
+<% end %><% end %>
 
 # ext_pillar:
 #   - hiera: /etc/hiera.yaml
