snapshot: do a proper scope lookup for apachedir
wikidump.conf.erb refered to @apachedir, but this variable is only
defined in snapshot::dumps::configs and this fails with the future
parser. Do an out-of-scope lookup, like we were already doing with
$datadir.

Change-Id: I34fe21f4227321aaca3972c92a4bff220f9cb1b8

--- a/modules/snapshot/templates/dumps/wikidump.conf.erb
+++ b/modules/snapshot/templates/dumps/wikidump.conf.erb
@@ -5,11 +5,11 @@
 
 [wiki]
 dblist=<%= @config[@configtype]['dblist'] %>
-privatelist=<%= @apachedir -%>/dblists/private.dblist
-closedlist=<%= @apachedir -%>/dblists/closed.dblist
+privatelist=<%= scope.lookupvar('snapshot::dumps::dirs::apachedir') -%>/dblists/private.dblist
+closedlist=<%= scope.lookupvar('snapshot::dumps::dirs::apachedir') -%>/dblists/closed.dblist
 skipdblist=<%= @config[@configtype]['skipdblist'] %>
-flowlist=<%= @apachedir -%>/dblists/flow.dblist
-dir=<%= @apachedir %>
+flowlist=<%= scope.lookupvar('snapshot::dumps::dirs::apachedir') -%>/dblists/flow.dblist
+dir=<%= scope.lookupvar('snapshot::dumps::dirs::apachedir') %>
 adminsettings=private/PrivateSettings.php
 tablejobs=<%= scope.lookupvar('snapshot::dumps::dirs::confsdir') -%>/table_jobs.yaml
 
