--- a/modules/role/templates/mariadb/mysqld_config/phabricator.my.cnf.erb
+++ b/modules/role/templates/mariadb/mysqld_config/phabricator.my.cnf.erb
@@ -2,7 +2,7 @@
 
 [client]
 port   = 3306
-socket = /tmp/mysql.sock
+socket = <%= @socket %>
 <% if @ssl == 'on' %>
 # ssl
 ssl-ca=/etc/mysql/ssl/cacert.pem
@@ -22,7 +22,7 @@ ssl-verify-server-cert
 [mysqld]
 
 user       = mysql
-socket     = /tmp/mysql.sock
+socket     = <%= @socket %> 
 port       = 3306
 extra_port = 3307
 basedir    = <%= @basedir %>
@@ -100,20 +100,7 @@ innodb_locks_unsafe_for_binlog  = 1
 # dump and load innodb buffer at start and stop
 innodb_buffer_pool_load_at_startup  = 1
 innodb_buffer_pool_dump_at_shutdown = 1
-<% if @kernelversion < "3.19" %>
-# Until kernel 3.16 http://www.spinics.net/lists/stable/msg61873.html
-# At least, I think so. For now we need to avoid the an assertion failure on Trusty w/ 3.13
-innodb_use_native_aio          = 0
-innodb_read_io_threads         = 16
-innodb_write_io_threads        = 8
-<% end %>
-<% if @ssl == 'on' %>
-# ssl
-ssl-ca=/etc/mysql/ssl/cacert.pem
-ssl-cert=/etc/mysql/ssl/server-cert.pem
-ssl-key=/etc/mysql/ssl/server-key.pem
-ssl-cipher=TLSv1.2
-<% elsif @ssl == 'puppet-cert' %>
+<% if @ssl == 'on' or @ssl == 'puppet-cert' %>
 # ssl
 ssl-ca=/etc/ssl/certs/Puppet_Internal_CA.pem
 ssl-cert=/etc/mysql/ssl/cert.pem
@@ -155,4 +142,3 @@ init_file                      = /etc/mysql/phabricator-init.sql
 quick
 max_allowed_packet = 32M
 
-#!includedir /etc/mysql/conf.d/
