tools: add an exim sender blocklist
Add an /etc/exim4/deny_senders.list file that can be used to selectively
deny sending outbound mail based on the envelope sender's address.

Change-Id: Ifc3c017ec84ff9645bc265f8ecd420c260aa44a8

--- a/modules/toollabs/templates/mail-relay.exim4.conf.erb
+++ b/modules/toollabs/templates/mail-relay.exim4.conf.erb
@@ -51,6 +51,7 @@ hostlist relay_from_hosts = 10.0.0.0/8
 
 acl_smtp_rcpt = acl_check_rcpt
 acl_smtp_data = acl_check_data
+acl_smtp_mail = acl_check_mail
 
 never_users = root
 
@@ -97,6 +98,10 @@ acl_check_rcpt:
 
 
 acl_check_data:
+  accept
+
+acl_check_mail:
+  deny senders = /etc/exim4/deny_senders.list
   accept
 
 ###########
