contint: remove references to Ubuntu/Trusty
CI no more has any Ubuntu Trusty instances or images. We run fully on
Debian Jessie.

Bug: T175696
Change-Id: I573645277051e63de11332a8cc8fcec1d53a7a73

--- a/modules/contint/templates/apache/proxy_jenkins.erb
+++ b/modules/contint/templates/apache/proxy_jenkins.erb
@@ -9,7 +9,7 @@ ProxyPassReverse    <%= @prefix -%> http://localhost:<%= @http_port -%><%= @pref
 ProxyRequests       Off
 
 # Local reverse proxy authorization override
-# Most unix distribution deny proxy by default (ie /etc/apache2/mods-enabled/proxy.conf in Ubuntu)
+# Most unix distribution deny proxy by default (ie /etc/apache2/mods-enabled/proxy.conf in Debian)
 
 <Proxy http://localhost:<%= @http_port -%><%= @prefix -%>*>
 
