--- a/modules/dumps/templates/web/xmldumps/nginx.conf.erb
+++ b/modules/dumps/templates/web/xmldumps/nginx.conf.erb
@@ -1,3 +1,8 @@
+##########################
+# This file is maintained by puppet!
+# modules/dumps/templates/web/xmldumps/nginx.conf.erb
+##########################
+
 limit_conn_zone $remote_addr$http_user_agent zone=addr:10m;
 
 server {
